# analyzer

./: .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .mailmap  .merlin  .ocamlformat  .readthedocs.yaml  .travis.yml  .zenodo.json  2.c  62-tm-inv-transfer-protection-witness.yml  CHANGELOG.md  CITATION.cff  Dockerfile  ForwardSettings.md  GOBLINT_README.md  INSTALL  LICENSE  LICENSE.libs  Makefile  Makefile.in  Makefile.ocaml  Makefile.ocaml.build  Problem01_label15.c  README-SV-COMP.md  README.md  TODO.md  Vagrantfile  _tags  array.txt  brs1f.c  char_arr.c  check.sh  conf.json  configure  configure.ac  coreutils.py  ctx_insens_funs.c  d.patch  (+70 more)
conf/: bench-yaml-validate.json  bench-yaml.json  big-benchmarks.json  big-benchmarks1.json  big-benchmarks2.json  big-benchmarks3.json  callstring-callsite.json  callstring-callstringWCallee.json  callstring-fundec.json  callstring-fundec_inf.json  callstring-loc.json  callstring-loc_inf.json  callstring-site_inf.json  callstring-stmt.json  callstring-stmt_inf.json  callstringFundec.json  callstringLoc.json  callstringStmt.json  context-gas-10.json  context-gas-20.json  context-gas-30.json  context-paper-24.json  context-widening.json  contextGas10.json  contextGas18.json  contextGas30.json  contextWidening.json  dune  empty.json  gob_par_sv.json  incremental.json  interval.json  ldv-races.json  library.json  lin2var.json  loopfree-callstring.json  loopfreeCallstring.json  malloc.json  min-unsound.json  minimal_incremental.json  (+64 more)
conf/PR-relational-array/: malloc-new-analysis+pointer_tracking.json  malloc-new-analysis.json  malloc-relational-pointer_tracking  malloc-relational.json  malloc-with-no-new-analysis.json  malloc.json  vla+heap-no-new-analysis.json  vla+heap.json  vla-octagon-relational.json  vla-polyhedra-relational.json  vla.json
conf/custom/: chrony-incrpostsolver.json  chrony.json  figlet-incrpostsolver.json  figlet.json  sqlite-ctx-sens-no-priv-incrpostsolver.json  sqlite-ctx-sens-no-priv.json  sqlite-ctx-sens-priv-incrpostsolver.json  sqlite-ctx-sens-priv.json  sqlite-minimal-incrpostsolver.json  sqlite-minimal.json  sqlite.json  zstd-minimal.json  zstd-race-baseline.json  zstd-race-deadlock.json  zstd-race-incrpostsolver.json  zstd-race.json
conf/examples/: README.md  large-program.json  medium-program.json  very-precise.json
conf/forward_artifact/: wbu_digest_gc_abort_lifo.json  wbu_digest_gc_abort_set.json  wbu_digest_gc_noabort_lifo.json  wbu_digest_gc_noabort_set.json  wbu_digest_nogc_abort_lifo.json  wbu_digest_nogc_abort_set.json  wbu_digest_nogc_noabort_lifo.json  wbu_digest_nogc_noabort_set.json  wbu_nodigest_gc_abort_lifo.json  wbu_nodigest_gc_abort_set.json  wbu_nodigest_gc_noabort_lifo.json  wbu_nodigest_gc_noabort_set.json  wbu_nodigest_nogc_abort_lifo.json  wbu_nodigest_nogc_abort_set.json  wbu_nodigest_nogc_noabort_lifo.json  wbu_nodigest_nogc_noabort_set.json
conf/masterthesis/: callstring-callsite_h2.json  callstring-callsite_h5.json  callstring-callstringWCallee_h2.json  callstring-callstringWCallee_h5.json  callstring-callstring_h2.json  callstring-callstring_h5.json  callstring-site_inf.json  callstring-stringWCallee_inf.json  callstring-string_inf.json  context-gas-0.json  context-gas-10.json  context-gas-20.json  context-gas-30.json  context-gas-40.json  context-paper-24.json  context-widening.json  loopfree-callstring.json
conf/multishot/: 10-BasicBuffoon.json  40-SmartyPants.json  60-BombasticWisenhimer.json  80-UppityEgghead.json  90-SensitiveSybil.json  95-FragileFanny.json  strategy.md
conf/race-digests/: fresh-only.json  full+once+barrier.json  full-minus-region+symblocks.json  full-minus-region.json  mutex+threadflag.json  mutex-only.json  none.json  region-only.json  symblocks-only.json  tf+thread.json  tf-only.json  tid+join.json  tid+mutex+join.json  tid+mutex.json  tid+thread.json  tid-only.json
conf/svcomp26/: common.json  level00-validate.json  level00.json  level01-validate.json  level01.json  level02-validate.json  level02.json  level03-validate.json  level03.json  level04-validate.json  level04.json  level05-validate.json  level05.json  seq-validate.txt  seq.txt  validate.json  verify.json
src/: .gitignore  AutoSelect.ml  AutoTune.ml  afl.ml  apronPrecCompare.ml  apronPrivPrecCompare.ml  autoSoundConfig.ml  autoTune.ml  autoTune0.ml  autoTuneSvompSpec.ml  dune  frama.ml  gobCli.ml  goblint.ml  goblint_lib.ml  goblint_mcp_server.ml  goblint_memtrace.memtrace.ml  goblint_memtrace.no-memtrace.ml  index.mld  jbuild  main.camldoc  mainarinc.ml  mainarincwcet.ml  maindomaintest.ml  maindomaintestafl.ml  maingoblint.ml  maingoblint.ml~  mainpromela.ml  mainspec.ml  messagesCompare.ml  pentagon.ml  prePrivPrecCompare.ml  prelude.ml  privPrecCompare.ml  svcompSpecConfig.ml  test_json.ml  version.ml
src/analyses/: abortUnless.ml  access.ml  accessAnalysis.ml  accessLocalAnalysis.ml  activeLongjmp.ml  activeSetjmp.ml  adressOfPointerAnalysis.ml  allocVarEscaped.ml  antConds.ml  arinc.ml  arincFun.ml  assert.ml  base.ml  base.ml.orig  base0.ml  baseFlag.ml  baseInvariant.ml  basePriv.ml  basePriv.mli  baseUtil.ml  baseUtil.mli  bitfield.ml  branchSet.ml  c2poAnalysis.ml  cInterpreter.ml  callstring.ml  callstringAnalysis.ml  callstringAnalysisQueue.ml  callstringTracking.ml  commonMemOutOfBounds.ml  commonPriv.ml  condVars.ml  constants.ml  contain.ml  contextJoins.ml  creationLockset.ml  creationLocksetAlternative.ml  deadlock.ml  deadlocksByRaces.ml  depbase.ml  (+145 more)
src/apron_files/: dune  octApron.apron.ml  octApronDomain.apron.ml
src/arg/: argConstraints.ml  argTools.ml  myARG.ml  observerAnalysis.ml  observerAutomaton.ml  violation.ml
src/build-info/: .gitignore  dune  dune_build_info.ml  dune_build_info.mli  goblint_build_info.ml
src/cdomains/: accessDomain.ml  addressDomain.ml  addressDomain.mli  addressDomain_intf.ml  apronDomain.ml  arincDomain.ml  arincFunDomain.ml  arinc_schedulabilty_domain.ml  arrayDomain.ml  arrayDomain.ml.orig  arrayDomain.mli  arrayDomain_deprecated.ml  baseDomain.ml  (+69 more)
unittest/: dune  mainTest.ml  maindomaintest.ml  testutils.ml
(+6623 files in other folders)
