(include_subdirs no)

; virtual library to allow js build (for gobview) without dune-build-info
; dune-build-info seems to be incompatible with js_of_ocaml
; File "gobview/src/.App.eobjs/build_info_data.ml-gen", line 1:
; Error: Could not find the .cmi file for interface
;        gobview/src/.App.eobjs/build_info_data.ml-gen.
(library
  (name goblint_build_info)
  (public_name goblint.build-info)
  (libraries batteries.unthreaded)
  (virtual_modules dune_build_info))

(rule
  (target configVersion.ml)
  (mode (promote (until-clean) (only configVersion.ml))) ; replace existing file in source tree, even if releasing (only overrides)
  (deps (universe)) ; do not cache, always regenerate
  (action (pipe-stdout (bash "git describe --all --long --dirty || echo \"n/a\"") (with-stdout-to %{target} (bash "xargs printf '(* Automatically regenerated, changes do not persist! *)\nlet version = \"%s\"'")))))

(rule
  (target configProfile.ml)
  (mode (promote (until-clean) (only configProfile.ml))) ; replace existing file in source tree, even if releasing (only overrides)
  (action (write-file %{target} "(* Automatically regenerated, changes do not persist! *)\nlet profile = \"%{profile}\"")))

(rule
  (target configOcaml.ml)
  (mode (promote (until-clean) (only configOcaml.ml))) ; replace existing file in source tree, even if releasing (only overrides)
  (action (write-file %{target} "(* Automatically regenerated, changes do not persist! *)\nlet flambda = \"%{ocaml-config:flambda}\"")))

