(include_subdirs unqualified)

(library
 (name goblint_common)
 (public_name goblint.common)
 (wrapped false) ; TODO: wrap
 (libraries
   batteries.unthreaded
   zarith
   goblint_std
   goblint_logs
   goblint_config
   goblint_tracing
   goblint-cil
   fpath
   yojson
   goblint_timing
   qcheck-core.runner)
 (flags :standard -open Goblint_std -open Goblint_logs)
 (foreign_stubs (language c) (names stubs))
 (ocamlopt_flags :standard -no-float-const-prop)
 (preprocess
  (pps
    ppx_deriving.std
    ppx_deriving_hash
    ppx_deriving_yojson))
 (instrumentation (backend bisect_ppx)))

(documentation)
