(include_subdirs no)

(library
 (name goblint_config)
 (public_name goblint.config)
 (wrapped false) ; TODO: wrap
 (libraries
   batteries.unthreaded
   goblint_std
   goblint_tracing
   fpath
   yojson
   json-data-encoding
   cpu
   goblint.sites
   qcheck-core.runner)
 (flags :standard -open Goblint_std)
 (preprocess
  (pps
    ppx_blob))
 (preprocessor_deps (file options.schema.json)))

(documentation)
