(include_subdirs unqualified)

(library
 (name goblint_domain)
 (public_name goblint.domain)
 (wrapped false) ; TODO: wrap
 (libraries
   batteries.unthreaded
   goblint_std
   goblint_common
   goblint-cil)
 (flags :standard -open Goblint_std)
 (preprocess
  (pps
    ppx_deriving.std
    ppx_deriving_hash
    ppx_deriving_yojson)))

(documentation)
